# Dijkstra_way_finding

./: README.md  pyproject.toml
shortest_way/: manage.py
shortest_way/dijkstra/: conditions.py  graph.py  graphs.py  models.py  news.json  urls.py  views.py
shortest_way/dijkstra/management/commands/: bot.py  config.py  emodji_code.py  load_data.py
shortest_way/dijkstra/migrations/: 0001_initial.py
shortest_way/dijkstra/static/dijkstra/css/: style.css
shortest_way/dijkstra/templates/: base.html  base12md.html  buy_tickets.html  error.html  news_list.html  route.html
shortest_way/dijkstra/tests/: test_dijkstra_views.py
shortest_way/shortest_way/: asgi.py  settings.py  urls.py  wsgi.py
shortest_way/users/: urls.py  views.py
shortest_way/users/templates/registration/: index.html  login.html  signup.html
shortest_way/users/tests/: test_users_views.py
